adding h1 for index rashed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, voluptatum adipisci. Doloremque eligendi aliquid hic, sunt nostrum ab veritatis asperiores voluptatibus, accusantium, ipsa recusandae! Suscipit eaque odit doloremque ratione qui!</p>
 
     <h1>any thing</h1>
-
+    <h1>no one</h1>
+<h1>i thing</h1>
     
 
 </body>
